fix(toast,css): Fix padding on mobile.
 #breaking

--- a/src/components/toast/toast.scss
+++ b/src/components/toast/toast.scss
@@ -128,6 +128,7 @@ md-toast {
     min-width: 0;
     border-radius: 0;
     bottom: 0;
+    padding: 0;
 
     &.ng-leave.ng-leave-active {
       &.md-swipeup {
